--- a/compose/compose.yaml
+++ b/compose/compose.yaml
@@ -30,48 +30,73 @@ services:
       #- "host.docker.internal:host-gateway"
 
   phpfpm:
-    image: markoshust/magento-php:8.3-fpm-2
+    image: markoshust/magento-php:8.1-fpm-5
     volumes: *appvolumes
     env_file: env/phpfpm.env
     #extra_hosts: *appextrahosts
 
+#  db:
+#    image: mariadb:10.6
+#    command:
+#      --max_allowed_packet=64M
+#      --optimizer_use_condition_selectivity=1
+#      --optimizer_switch="rowid_filter=off"
+#    ports:
+#      - "3306:3306"
+#    env_file: env/db.env
+#    volumes:
+#      - dbdata:/var/lib/mysql
+
+  # If you wish to use MySQL, comment out the mariadb db image above and
+  # uncomment this block.
   db:
-    image: mariadb:10.6
+    image: mysql:8.0
     command:
       --max_allowed_packet=64M
-      --optimizer_use_condition_selectivity=1
-      --optimizer_switch="rowid_filter=off"
+      --log-bin-trust-function-creators=1
+      --innodb_buffer_pool_size=256M
+      #--optimizer_use_condition_selectivity=1
+      #--optimizer_switch="rowid_filter=off"
     ports:
       - "3306:3306"
     env_file: env/db.env
     volumes:
       - dbdata:/var/lib/mysql
 
-  ## If you wish to use MySQL, comment out the mariadb db image above and
-  ## uncomment this block.
-  #db:
-  #  image: mysql:8.0
-  #  command:
-  #    --max_allowed_packet=64M
-  #    --optimizer_use_condition_selectivity=1
-  #    --optimizer_switch="rowid_filter=off"
-  #  ports:
-  #    - "3306:3306"
-  #  env_file: env/db.env
-  #  volumes:
-  #    - dbdata:/var/lib/mysql
-
   redis:
     image: redis:7.2-alpine
     ports:
       - "6379:6379"
 
-  opensearch:
-    image: markoshust/magento-opensearch:2.12-0
+#  opensearch:
+#    image: markoshust/magento-opensearch:2.12-0
+#    ports:
+#      - "9200:9200"
+#      - "9300:9300"
+#    env_file: env/opensearch.env
+#    environment:
+#      - "discovery.type=single-node"
+#      # Avoid test failures due to small disks
+#      # More info at https://github.com/markshust/docker-magento/issues/488
+#      - "cluster.routing.allocation.disk.threshold_enabled=false"
+#      - "index.blocks.read_only_allow_delete"
+#      ## Uncomment to set custom heap size to avoid memory errors
+#      - "OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g"
+#      ## Uncomment to increase the virtual memory map count
+#      - "max_map_count=262144"
+
+  # If you wish to use Elasticsearch, comment out opensearch image above and
+  # uncomment this block. Do the same in the composer.healthcheck.yaml file.
+#   Additionally, if you are performing the manual setup, you will need to
+#   update the bin/setup command to use the $ES_HOST variable as the value for
+#   the --elasticsearch-host argument passed to bin/magento setup:install.
+
+  elasticsearch:
+    image: markoshust/magento-elasticsearch:7.17
     ports:
       - "9200:9200"
       - "9300:9300"
-    env_file: env/opensearch.env
+    env_file: env/elasticsearch.env
     environment:
       - "discovery.type=single-node"
       ## Avoid test failures due to small disks
@@ -79,31 +104,9 @@ services:
       - "cluster.routing.allocation.disk.threshold_enabled=false"
       - "index.blocks.read_only_allow_delete"
       ## Uncomment to set custom heap size to avoid memory errors
-      #- "OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g"
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
       ## Uncomment to increase the virtual memory map count
-      #- "max_map_count=262144"
-
-  ## If you wish to use Elasticsearch, comment out opensearch image above and
-  ## uncomment this block. Do the same in the composer.healthcheck.yaml file.
-  # Additionally, if you are performing the manual setup, you will need to
-  # update the bin/setup command to use the $ES_HOST variable as the value for
-  # the --elasticsearch-host argument passed to bin/magento setup:install.
-  #elasticsearch:
-  #  image: markoshust/magento-elasticsearch:8.13-0
-  #  ports:
-  #    - "9200:9200"
-  #    - "9300:9300"
-  #  env_file: env/elasticsearch.env
-  #  environment:
-  #    - "discovery.type=single-node"
-  #    ## Avoid test failures due to small disks
-  #    ## More info at https://github.com/markshust/docker-magento/issues/488
-  #    - "cluster.routing.allocation.disk.threshold_enabled=false"
-  #    - "index.blocks.read_only_allow_delete"
-  #    ## Uncomment to set custom heap size to avoid memory errors
-  #    #- "ES_JAVA_OPTS=-Xms1g -Xmx1g"
-  #    ## Uncomment to increase the virtual memory map count
-  #    #- "max_map_count=262144"
+      - "max_map_count=262144"
 
   rabbitmq:
     image: markoshust/magento-rabbitmq:3.12-0
