--- a/compose/compose.dev.yaml
+++ b/compose/compose.dev.yaml
@@ -10,8 +10,9 @@ services:
       - ./src/grunt-config.json.sample:/var/www/html/grunt-config.json:cached
       - ./src/Gruntfile.js.sample:/var/www/html/Gruntfile.js:cached
       - ./src/dev/tools/grunt/configs:/var/www/html/dev/tools/grunt/configs:cached
-      - ./src/nginx.conf.sample:/var/www/html/nginx.conf:cached
+      - ./src/nginx.conf:/var/www/html/nginx.conf:cached
       - ./src/package.json.sample:/var/www/html/package.json:cached
+      - ./images/php/conf/php.ini:/usr/local/etc/php/php.ini:cached
       #- ./src/auth.json:/var/www/html/auth.json:cached
       #- ./src/m2-hotfixes:/var/www/html/m2-hotfixes:cached
       #- ./src/patches:/var/www/html/patches:cached
